5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1791_1598.log
== TEST (2019-05-29 14:12:42) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
n=0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(n)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:13:22) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(n)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:13:25) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(n)
		
-- EXECUTION TIME:
0.555097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1598/main.py", line 8, in <module>
    print(n)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:20) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:14:22) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- EXECUTION TIME:
0.342501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1598/main.py", line 8, in <module>
    print(round(n, 2))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:23) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:20) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:23) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>=80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:45) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:47) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:16:47) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v * 0.05
	i = i+1
print(round(n, 2))
		
-- EXECUTION TIME:
0.369032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1598/main.py", line 8, in <module>
    print(round(n, 2))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:23) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:19:47) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	i = i+1
print(round(i, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:20:18) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	i = i+1
print(round(i, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:12) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	else(v[i]<=80):
		n = 0
	i = i+1
	
print(round(i, 2))
		
-- ERROR:
File "XXXX", line 7
    else(v[i]<=80):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:39) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	else:
		n = 0
	i = i+1
	
print(round(i, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:24:09) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	else:
		n = 0
	i = i+1
	
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:25:18) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	else:
		n = 0
	i = i+1
	
print(round(n, 2))
		
-- EXECUTION TIME:
0.488781
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:52) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
while(i<size(v)):
	if(v[i]>80):
		n = v - 5
	else:
		n = 0
	i = i+1
print(round(n, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:28) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(i, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:47:30) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(i, 2))
	
-- EXECUTION TIME:
0.502306
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
4
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
4
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:47:30) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(i, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:46) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:48:49) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(m, 2))
	
-- EXECUTION TIME:
0.342072
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
[11.32 40.2  32.    0.  ]
0
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
[32.  44.  32.1 43.2]
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
[23  2  1]
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:48:49) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:29) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print(v[i]+m*b)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:58) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
m=0
while(i<size(v)):
	if(v[i]>=80):
		m=m+1
	else:
		m=m+0
	i=i+1
print((v)+m*b)
print(round(m, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:03) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
print((v)+c*b)
print(round(c, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:38) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
j =((v)+c*b)
print(round(j, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:44) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =((v)+c*b)
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:32) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =((v)+c*b)
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:32) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =(v[i])+c*b
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:41) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =(v)+c*b
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:23) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =(v)+c*b
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:42) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
t=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =(v)+c*b
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:52) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =sum(v)+c*b
print(round(t, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:27:02) 
-- CODE:
from numpy import*
v = array(eval(input("Valor do item: ")))
i = 0
b =-5
c=0
while(i<size(v)):
	if(v[i]>=80):
		c=c+1
	else:
		c=c+0
	i=i+1
t =sum(v)+c*b
print(round(t, 2))
	
-- EXECUTION TIME:
0.352055
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
